--- a/style.css
+++ b/style.css
@@ -2,3 +2,10 @@
 h1 {
     color: rgb(23, 100, 116);
 }
+body {
+    color: chocolate;
+    background-color: aquamarine;
+    padding:0%;
+    margin:auto;
+    
+}
