update/fun with css

--- a/style.css
+++ b/style.css
@@ -1,11 +1,39 @@
-
+body {
+    font-family: 'Roboto Condensed', sans-serif;
+}
 h1 {
     color: rgb(23, 100, 116);
+    height: 100px;
+    font-size: 80px;
+    font-weight: 1000;
+    margin: 50px 300px 50px 500px;
 }
-body {
+
+    body {
     color: chocolate;
-    background-color: aquamarine;
+    background-color: tan;
     padding:0%;
     margin:auto;
     
+}
+main img {
+    width: 200px;
+    height: 200px;
+}
+h2 {
+    color: rgb(23, 100, 116);
+    height: 50px;
+    font-size: 40px;
+}
+
+footer {
+    text-align: center;
+}
+a {
+    margin-top: 50px ;
+    margin-bottom: 200px;
+    margin-left: 600px;
+    margin-right: 300px;
+    font-size: 40px;
+    color:beige
 }
